--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ProfessorCaesarMessageSender
+application.title=prof_mailer
 application.vendor=Devasia Manuel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -23,12 +23,12 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProfessorCaesarMessageSender.jar
+dist.jar=${dist.dir}/prof_mailer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mail.jar=C:\\Users\\Devasia Manuel\\Desktop\\mail.jar
-file.reference.mail.jar-1=C:\\Users\\Devasia\\Desktop\\mail.jar
+file.reference.mail.jar=C:/Users/Devasia Manuel/Desktop/mail.jar
+file.reference.mail.jar-1=C:/Users/Devasia/Desktop/mail.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
